[package]
name = "pwncraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
tokio = { version = "1.23.1", features = ["tokio-macros", "full"] }
